--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <script src="main.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
