Get randomly changing headings.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
+    <h1 id="heading">Let's Play Tic-Tac-Toe!</h1>
+    <div class="board">
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+    </div>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
   </body>
