Add a dynamically generated board. YAAAAY template literals!

--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
   </head>
   <body>
     <h1 id="heading">Let's Play Tic-Tac-Toe!</h1>
-    <div class="board">
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="space"></div>
-      <div class="space"></div>
+    <div class="board-container" >
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
